Changed the call for next_evolutions and accordingly changed pokemon.html to call for multiple evolutions

--- a/pokemon_entities/templates/pokemon.html
+++ b/pokemon_entities/templates/pokemon.html
@@ -25,7 +25,7 @@
         <p><b>{{pokemon.title_ru}}</b> (анг. {{pokemon.title_en}}, яп. {{pokemon.title_jp}}) — {{pokemon.description}}</p>
         <hr>
         <div class="mt-4">
-          {% if pokemon.next_evolution or pokemon.previous_evolution %}
+          {% if pokemon.next_evolutions or pokemon.previous_evolution %}
             <h4 class="mb-0">Эволюции покемона</h4>
             <div class="row">
               {% if pokemon.previous_evolution %}
@@ -41,18 +41,20 @@
                   <h6 class="d-flex justify-content-center m-2">Из кого эволюционировал</h6>
                 </div>
               {% endif %}
-              {% if pokemon.next_evolution %}
-                <div class="col-5 clearfix p-2 m-2">
-                  <div class="img-thumbnail">
-                    <a href="{% url 'pokemon' pokemon.next_evolution.pokemon_id %}">
-                      <div class="d-flex justify-content-center">
-                        <img class="pull-left mr-2 float-left" src="{{pokemon.next_evolution.img_url}}" style="height:50px; width:50px">
-                        <p class="align-middle m-0" style="line-height:50px; font-size: 20px;">{{pokemon.next_evolution.title_ru}}</p>
-                      </div>
-                    </a>
+              {% if pokemon.next_evolutions %}
+                {% for next_evolution in pokemon.next_evolutions %}
+                  <div class="col-5 clearfix p-2 m-2">
+                    <div class="img-thumbnail">
+                      <a href="{% url 'pokemon' next_evolution.pokemon_id %}">
+                        <div class="d-flex justify-content-center">
+                          <img class="pull-left mr-2 float-left" src="{{next_evolution.img_url}}" style="height:50px; width:50px">
+                          <p class="align-middle m-0" style="line-height:50px; font-size: 20px;">{{next_evolution.title_ru}}</p>
+                        </div>
+                      </a>
+                    </div>
+                    <h6 class="d-flex justify-content-center m-2">В кого эволюционирует</h6>
                   </div>
-                  <h6 class="d-flex justify-content-center m-2">В кого эволюционирует</h6>
-                </div>
+                {% endfor %}
               {% endif %}
             </div>
           {% endif %}
